Add first table and sample row

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 section {
-    min-height: 100px;
-    background-color: rosybrown;
+    min-height: 600px; /* just for visual purpose */
+    background-color: rgb(177, 177, 154); /* just for visual purpose */
 }
+
