--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ section {
 }
 
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: Lucida Console, Courier, monospace;
     color: rgb(32, 32, 32);
 }
 
